Fixed horizontal overflow and added placeholder picture

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,7 @@ h2,h3,h4,h5,h6,p,span{
   display: flex;
   height: 100vh;
   width: 100vw;
+  max-width:100%;
 
   .title{
     animation: fadein 3s;
@@ -74,15 +75,21 @@ h2,h3,h4,h5,h6,p,span{
   background-color: $black-high;
   min-height: 100vh;
   width: 100vw;
+  max-width:100%;
   padding-top: 6rem;
 
   .main-title{
     color: $cl-main-text;
-    
   }
   
   .main-text{
     color: $cl-main-text;
+  }
+
+  .picture {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 50%;
   }
 }
 
@@ -90,6 +97,7 @@ h2,h3,h4,h5,h6,p,span{
   background-color:$black-medium;
   min-height: 100vh;
   width: 100vw;
+  max-width:100%;
   padding-top: 6rem;
 }
 
